--- a/api/src/app/views/emails/subscription.hbs
+++ b/api/src/app/views/emails/subscription.hbs
@@ -1,8 +1,7 @@
-<strong>Hello, {{ organizer }}!</strong>
-<p>There is a new subscription in your meetup: <strong>{{ meetup }}</strong></p>
-<p>Check subscriber details:</p>
+<strong>Olá, {{ organizer }}!</strong>
+<p>Houve uma nova inscrição no seu meetup: <strong>{{ meetup }}</strong></p>
+<p>Dados do inscrito:</p>
 <p>
-  <strong>Name: </strong> {{ user }} <br />
+  <strong>Nome: </strong> {{ user }} <br />
   <strong>E-mail: </strong> {{ email }} <br />
 </p>
-<p>Let's go!!! This meetup is gonna be awesome =)</p>
